fix t3skin bug: white labels on gray extjs buttons are not readable
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/caretaker/trunk@27952 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/trunk/res/css/tx.caretaker.overview.css
+++ b/trunk/res/css/tx.caretaker.overview.css
@@ -1,6 +1,7 @@
 .ext-gecko .x-btn button {
 	background-repeat: no-repeat;
 	padding-left: 18px;
+	color: #333333;
 }
 
 .icon-caretaker-root { background-image: url(../icons/caretaker.gif) !important; }
